src/Samples/Common/Views/Errors/ExceptionInLifecycle.dothtml
@viewModel DotVVM.Samples.Common.ViewModels.Errors.ExceptionInLifecycleViewModel, DotVVM.Samples.Common

<!DOCTYPE html>

<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
<head>
    <meta charset="utf-8" />
    <title></title>
</head>
<body>

    <h1>Exception in Load phase</h1>

    <div>
        <strong>
            <cc:ExceptionThrower Stage="Load" />
        </strong>
    </div>

</body>
</html>


